--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="652435986@qq.com">email</a></li>
+        		
 			</ul>
 		</footer>
 	</body>
